--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1125,4 +1125,8 @@
     <string name="hardware_keys_title">Hardware</string>
     <string name="hardware_keys_disable_title">Hardware keys</string>
     <string name="hardware_keys_disable_summary">Use the device hardware keys for navigation</string>
+
+    <!-- IME button space -->
+    <string name="navigation_bar_ime_space_title">IME button space</string>
+    <string name="navigation_bar_ime_space_summary">Show IME button space below keyboard</string>
 </resources>
