--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1089,8 +1089,8 @@
     <string name="alarm_blocker_warning">Blocking alarms have the potential to cause instability, crashes or data loss.</string>
 
     <!-- R Notification headers -->
-    <string name="notification_headers_title">Show notification headers</string>
-    <string name="notification_headers_summary">Whether to show R style notification headers (Requires a SystemUI restart)</string>
+    <string name="notification_headers_title">Show QS notification headers</string>
+    <string name="notification_headers_summary">Whether to show R style QS notification headers (Requires a SystemUI restart)</string>
 
     <!-- Full screen gestures -->
     <string name="navbar_gesture_pill_toggle_title">Fullscreen gestures</string>
