--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1033,6 +1033,9 @@
     <!-- QS themes -->
     <string name="qs_bg_use_new_tint">QS Tint</string>
     <string name="qs_bg_use_new_tint_summary">Enable QS tiles tint style</string>
+    <string name="qs_tint_off">Disable</string>
+    <string name="qs_tint_random">Random color</string>
+    <string name="qs_tint_accent">Accent color</string>
 
     <!-- OOS clear all button -->
     <string name="enable_clear_all_button">OOS clear all button</string>
