Disco dingo the qs [2/2]
Change-Id: I126451ed6ba404ec5d87c71fd031f38f72ea38c1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1036,6 +1036,7 @@
     <string name="qs_tint_off">Disable</string>
     <string name="qs_tint_random">Random color</string>
     <string name="qs_tint_accent">Accent color</string>
+    <string name="qs_disco_mode">Disco</string>
 
     <!-- OOS clear all button -->
     <string name="enable_clear_all_button">OOS clear all button</string>
