--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1038,6 +1038,12 @@
     <string name="qs_tint_accent">Accent color</string>
     <string name="qs_disco_mode">Disco</string>
 
+    <!-- QS Label Tint -->
+    <string name="qs_label_use_new_tint">QS Label Tint</string>
+    <string name="qs_label_tint_off">Default</string>
+    <string name="qs_label_tint_random">Random color</string>
+    <string name="qs_label_tint_accent">Accent color</string>
+
     <!-- OOS clear all button -->
     <string name="enable_clear_all_button">OOS clear all button</string>
     <string name="enable_clear_all_button_summary">Show OOS clear all notifications</string>
