Nad: Im: Simple Dual statusbar row [2/2]
Change-Id: I6298d4e1fbdaee70f32e576a6b34b3630b8d51c7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1322,4 +1322,9 @@
     <string name="statusbar_icons_style_summary">Choose the style of your statusbar notification icons</string>
     <string name="header_icons_style">Colored Notification Headers Icons</string>
     <string name="header_icons_style_summary">Choose the style of your notification headers icons</string>
+
+    <!-- Statusbar dual row -->
+    <string name="statusbar_dual_row_title">Dual Status Bar</string>
+    <string name="statusbar_dual_row_summary">Enable dual row statusbar</string>
+
 </resources>
