--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -573,6 +573,7 @@
     <string name="corners_summary">Allow customized rounded corners</string>
     <string name="corner_radius">Rounded corner radius</string>
     <string name="content_padding">Corner content padding</string>
+    <string name="status_bar_padding">Statusbar extra padding</string>
     <string name="corner_fwvals">Use framework values</string>
     <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>
 
