--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1146,6 +1146,10 @@
     <string name="theming_settings_dashboard_icons_default_accent2">Accent background</string>
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
+    <string name="theming_settings_dashboard_icons_bg_random">Random Background</string>
+    <string name="theming_settings_dashboard_icons_random">Random Icon</string>
+    <string name="theming_settings_dashboard_icons_random_bg_accent">Icon Random Bg Accent</string>
+    <string name="theming_settings_dashboard_icons_accent_bg_random">Icon Accent Bg Random</string>
 
     <!-- Pulse -->
     <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
