--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1095,7 +1095,7 @@
 
     <!-- R Notification headers -->
     <string name="notification_headers_title">Show QS notification headers</string>
-    <string name="notification_headers_summary">Whether to show R style QS notification headers (Requires a SystemUI restart)</string>
+    <string name="notification_headers_summary">Whether to show R style QS notification headers</string>
 
     <!-- Full screen gestures -->
     <string name="navbar_gesture_pill_toggle_title">Fullscreen gestures</string>
