Implement quick QS brightness slider [2/2]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1317,4 +1317,7 @@
     <!-- Pocket judge -->
     <string name="pocket_judge_title">Pocket detection</string>
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
+
+    <!-- QQS brightness slider -->
+    <string name="qqs_brightness_slider_title">Quick Qs Brightness slider</string>
 </resources>
