Add QSPanel disco [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>
Change-Id: Idf05e79e81b81cccd2703c14552b310212aff1f9

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1187,4 +1187,8 @@
     <!-- StatusBar notification count -->
     <string name="notif_count_title">Notification count</string>
     <string name="notif_count_summary">Show notification count near notfication icons</string>
+
+    <!-- QS Panel Disco -->
+    <string name="qs_panel_disco_title">Disco mode QS panel</string>
+    <string name="qs_panel_disco_summary">Shake your head</string>
 </resources>
