Add QSPanel disco duration [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>
Change-Id: Ib510528d05f62630efa0fa85b84c712f59687794

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1191,4 +1191,5 @@
     <!-- QS Panel Disco -->
     <string name="qs_panel_disco_title">Disco mode QS panel</string>
     <string name="qs_panel_disco_summary">Shake your head</string>
+    <string name="qs_panel_disco_duration_title">Disco QS panel duration</string>
 </resources>
