Add disable random color for nusantara preference
Base code on https://github.com/Project-Xtended/packages_apps_Xtensions/commit/e32dabb808c78b5121fbe336d86993c527677b5a#diff-db1d61f7633bd6d419e8b85fd84b5657

Change-Id: I3d051f01f92a426bf22e7510275618aae3a1920f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,8 @@
     <!-- Nusantara Wings -->
     <string name="dirtytweaks_title">Nusantara Wings</string>
     <string name="dirtytweaks_summary">Get your favorite customization</string>
+    <string name="nad_style_title">Nusantara style BG</string>
+    <string name="nad_style_summary">Disable random color</string>
 
     <!-- Bottom navigation -->
     <string name="bottom_nav_system_title">System</string>
