--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -238,6 +238,7 @@
     <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
     <string name="network_traffic_statusbar">Status bar</string>
     <string name="network_traffic_header">Expanded header</string>
+    <string name="net_traffic_font">Fonts</string>
 
     <!-- Network Traffic Location -->
     <string name="network_traffic_location_title">Traffic indicator placement</string>
