Add transparent for nusantara BG syle
Change-Id: I7c0f9f6f6bbf99d32bc0d1cb346f37e0ab5e37f4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,8 +19,10 @@
     <!-- Nusantara Wings -->
     <string name="dirtytweaks_title">Nusantara Wings</string>
     <string name="dirtytweaks_summary">Get your favorite customization</string>
-    <string name="nad_style_title">Nusantara style BG</string>
-    <string name="nad_style_summary">Disable random color</string>
+    <string name="nad_style_title">Nusantara wings background</string>
+    <string name="nad_color_random">Random</string>
+    <string name="nad_color_transparent">Transparent</string>
+    <string name="nad_color_accent">Accent</string>
 
     <!-- The Team -->
     <string name="dialog_team_title">The team</string>
