Nad: Add OOS Compact VoLTE & VoWifi icon [2/2]
Change-Id: I9f62997ffe9ba3f74bb6c6d9a924a1125226f489
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Ayush Dubey <ayushdubey70@gmail.com>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: Ray <vincentrayananda@gmail.com>
Signed-off-by: ghou8s <ghou8s@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -144,6 +144,7 @@
     <string name="volte_icon_oos">VoLTE OOS Icon</string>
     <string name="volte_icon_miui">VoLTE Miui Icon</string>
     <string name="volte_icon_hd">HD Icon</string>
+    <string name="volte_icon_oos_compact">VoLTE OOS Compact Icon</string>
 
     <!-- VoWiFi icon -->
     <string name="vowifi_icon_title">VoWiFi icon</string>
@@ -156,6 +157,7 @@
     <string name="vowifi_icon_asus">Asus Icon</string>
     <string name="vowifi_icon_oneplus">OOS Icon</string>
     <string name="vowifi_icon_moto">Motorola Icon</string>
+    <string name="vowifi_icon_oos_compact">OOS Compact Icon</string>
 
     <!-- Double Tap Lockscreen to Sleep -->
     <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
