--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1051,6 +1051,8 @@
     <!-- R Notification headers -->
     <string name="notification_headers_title">Show QS notification headers</string>
     <string name="notification_headers_summary">Whether to show R style QS notification headers</string>
+    <string name="center_notification_headers_title">Center notification headers</string>
+    <string name="center_notification_headers_summary">Whether to position R style notification headers at the center</string>
 
     <!-- Full screen gestures -->
     <string name="navbar_gesture_pill_toggle_title">Fullscreen gestures</string>
