--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1036,11 +1036,13 @@
     <string name="display_cutout_force_fullscreen_restart_app">Please restart the application to apply the changes.</string>
     <string name="cutout_force_fullscreen_no_apps">No apps</string>
 
-    <!-- QS Header data uasge -->
-    <string name="qs_datausage_title">Data usage in QS Header</string>
+    <!-- QS data usage -->
+    <string name="qs_datausage_title">Data usage</string>
     <string name="qs_datausage_disabled">Disabled</string>
     <string name="qs_datausage_daily">Daily usage</string>
     <string name="qs_datausage_monthly">Monthly usage</string>
+    <string name="qs_data_usage_location_title">Data usage location</string>
+    <string name="qs_data_usage_location_summary">Show data usage in QS header</string>
 
     <!-- Launch music player when headset is connected -->
     <string name="headset_connect_player_title">Launch music app on headset connection</string>
