--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1296,4 +1296,8 @@
     <string name="lock_item_center">Center</string>
     <string name="lock_item_right">Right</string>
     <string name="lockscreen_item_padding_title">Lockscreen Items Padding</string>
+
+    <!-- Fingerprint unlock keystore -->
+    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
+    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
 </resources>
