--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1300,4 +1300,5 @@
     <!-- Fingerprint unlock keystore -->
     <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
     <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
+    <string name="fp_encrypt_warning">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: You are encrypted so you can\'t use this feature.</string>
 </resources>
