--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1301,4 +1301,8 @@
     <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
     <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
     <string name="fp_encrypt_warning">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: You are encrypted so you can\'t use this feature.</string>
+
+    <!-- Volume per app -->
+    <string name="show_app_volume_title">Show app volume</string>
+    <string name="show_app_volume_summary">Show app volume in volume panel. Can be useful while playing music during games.</string>
 </resources>
