--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -567,6 +567,7 @@
     <string name="status_bar_logo_position_right">Right</string>
     <string name="status_bar_logo_position_left">Left</string>
     <string name="status_bar_logo_style">Logo style</string>
+    <string name="status_bar_logo_style_nad">Default (Nusantara)</string>
     <string name="status_bar_logo_style_du">Dirty Unicorns</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_apple">Apple</string>
