--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1236,8 +1236,8 @@
     <string name="theme_type_nad_clear">Nusantara clear</string>
 
     <!-- RGB accent -->
-    <string name="rgb_accent_picker_title">RGB accent picker</string>
-    <string name="rgb_accent_picker_summary">Choose the accent color yourself</string>
+    <string name="accent_color">Accent picker</string>
+    <string name="accent_color_summary">Choose the accent color yourself</string>
 
     <!-- Fonts -->
     <string name="font_type_title">Font type</string>
