--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -386,6 +386,8 @@
     <string name="battery_category_title">Battery</string>
     <string name="status_bar_battery_style_title">Battery icon style</string>
     <string name="status_bar_battery_style_icon_portrait">Portrait</string>
+    <string name="status_bar_battery_style_icon_rlandscape">Icon landscape R</string>
+    <string name="status_bar_battery_style_icon_landscape">Icon landscape L</string>
     <string name="status_bar_battery_style_circle">Circle</string>
     <string name="status_bar_battery_style_dotted_circle">Circle (Dotted)</string>
     <string name="status_bar_battery_style_filled_circle">Circle (Filled)</string>
@@ -394,9 +396,11 @@
     <string name="battery_percentage_title">Battery percentage</string>
     <string name="status_bar_battery_percentage_default">Hidden</string>
     <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
-    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+    <string name="status_bar_battery_percentage_text_next">Outside the icon</string>
     <string name="battery_show_location_title">Battery location</string>
     <string name="battery_show_location_summary">Toggle battery location for QS header</string>
+    <string name="left_battery_text_title">Left battery text</string>
+    <string name="left_battery_text_summary">Put the battery text on left of battery icon</string>
 
     <!-- Statusbar Tuner -->
     <string name="statusbar_items_title">Statusbar icons</string>
