--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1292,7 +1292,7 @@
     <string name="ui_radius_medium">Medium</string>
     <string name="ui_radius_large">Large</string>
 
-    <string name="brightness_slider_qs_unexpanded">MIUI brightness slider</string>
+    <string name="brightness_slider_qs_unexpanded">Brightness slider like A12</string>
     <string name="brightness_slider_qs_unexpanded_summary">Shows brightness slider below qs panel</string>
 
     <!-- Lockscreen Item Alignments -->
