--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -691,7 +691,7 @@
     <!-- Flashlight gestures -->
     <string name="double_tap_power_flashlight_title">Screen off power button torch</string>
     <string name="torch_power_button_gesture_none">Disabled</string>
-    <string name="torch_power_button_gesture_dt">Double tap power to toggle torch</string>
+    <string name="torch_power_button_gesture_dt">Double press power to toggle torch</string>
     <string name="torch_power_button_gesture_lp">Long press power to toggle torch</string>
 
     <!-- Disabling FC notifications --> 
